# BoostPro1

master/: CMakeLists.txt
master/client/src/: client.cpp
master/public/: basedata.hpp
master/server/src/: server.cpp
master/server/src/controller/: base_controller.hpp  compute_controller.cpp  compute_controller.hpp
master/server/src/dao/: student_dao.cpp  student_dao.hpp
master/server/src/database/: mysql_pro.cpp  mysql_pro.hpp
master/server/src/entity/: student.hpp
master/server/src/router/: method_roiuter.hpp  method_router.cpp
master/server/src/static/: game.html  helloworld.html
master/server/src/urldispatch/: baseurl_handler.hpp  firststage_html_url_handler.cpp  firststage_html_url_handler.hpp  firststage_json_url_handler.cpp  firststage_json_url_handler.hpp  url_router.cpp  url_router.hpp
